--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -101,6 +101,7 @@ body { margin: 0; background: url("images/bgpattern2.png"); }
 #page-home .more-posts-header { margin-bottom: 20px; }
 
 /* Home page latest posts */
+#page-home .latest-posts { background: rgba(0,0,0,0.6); padding-bottom: 10px; }
 #page-home .latest-posts .post { display: table; border-collapse: separate; border-top: 5px; margin-bottom: 20px; }
 #page-home .latest-posts .post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
 #page-home .latest-posts .post .post-info-container { position: relative; display: table-cell; vertical-align: top; padding-left: 10px; }
@@ -136,11 +137,10 @@ body { margin: 0; background: url("images/bgpattern2.png"); }
 #page-call .bars-info-displayer-header:hover { cursor: pointer; }
 #page-call .bars-info-displayer-header { background-color: rgba(50,50,50,0.4); border-radius: 10px 10px 0 0; padding: 15px; overflow: hidden; }
 #page-call .bars-info-displayer-footer { background-color: rgba(50,50,50,0.4); border-radius: 0 0 10px 10px; padding: 10px; }
-#page-call .bars-info-displayer-header-title { float: left; }
-#page-call .bars-info-displayer-header-caption { float: right; }
+#page-call .bars-info-displayer-header-caption { margin-left: 20px; }
 #page-call .bars-hidden-info { background-color: rgba(0,0,0,0.4); padding: 15px; }
 #page-call .bars-hidden-info > ul { list-style-type: lower-alpha; }
-#page-call .bars-hidden-info > ul > li { margin: 15px 0; }
+#page-call .bars-hidden-info > ul > li { margin: 15px 0; word-wrap: break-word; }
 #page-call .bars-hidden-info .mail-address, #page-call .bars-hidden-info .shortfilm-format { margin-left: 50px; margin-top: 10px; }
 
 /* Programación (selection.php -> tmpl_selection) */
